Complete Fabric 1.19.2 integration and vanilla item use