@@ -1,83 +1,61 @@
 package xin.vanilla.aotake.util;
 
-import com.mojang.brigadier.StringReader;
-import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import lombok.NonNull;
-import net.fabricmc.api.EnvType;
-import net.fabricmc.api.Environment;
-import net.fabricmc.fabric.api.client.networking.v1.ClientPlayNetworking;
-import net.fabricmc.fabric.api.networking.v1.ServerPlayNetworking;
-import net.fabricmc.fabric.api.transfer.v1.item.ItemStorage;
-import net.fabricmc.fabric.api.transfer.v1.item.ItemVariant;
-import net.fabricmc.fabric.api.transfer.v1.storage.Storage;
-import net.fabricmc.fabric.api.transfer.v1.storage.StorageView;
-import net.fabricmc.fabric.api.transfer.v1.transaction.Transaction;
-import net.minecraft.client.Minecraft;
+import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.commands.CommandSourceStack;
-import net.minecraft.commands.arguments.blocks.BlockStateParser;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
-import net.minecraft.core.Registry;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.NbtIo;
-import net.minecraft.nbt.TagParser;
-import net.minecraft.network.chat.ClickEvent;
-import net.minecraft.network.chat.HoverEvent;
-import net.minecraft.network.protocol.Packet;
-import net.minecraft.resources.ResourceKey;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.server.MinecraftServer;
-import net.minecraft.server.level.ServerLevel;
-import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.InteractionHand;
-import net.minecraft.world.InteractionResult;
-import net.minecraft.world.MenuProvider;
-import net.minecraft.world.SimpleContainer;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.item.Item;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.world.Container;
+import net.minecraft.world.SimpleContainer;
+import net.minecraft.world.MenuProvider;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.Block;
+import net.minecraft.nbt.CompoundTag;
+import net.minecraft.server.MinecraftServer;
 import net.minecraft.world.level.block.entity.BlockEntity;
-import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.InteractionResult;
+import net.minecraft.core.Direction;
+import net.minecraft.world.InteractionHand;
+import net.minecraft.core.BlockPos;
 import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.Vec3;
+import net.minecraft.network.chat.ClickEvent;
+import net.minecraft.network.chat.HoverEvent;
+import net.minecraft.world.level.Level;
+import net.minecraft.server.level.ServerLevel;
+import net.fabricmc.loader.api.FabricLoader;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import xin.vanilla.aotake.AotakeComponent;
+import xin.vanilla.aotake.AotakeLang;
 import xin.vanilla.aotake.AotakeSweep;
-import xin.vanilla.aotake.Identifier;
 import xin.vanilla.aotake.config.CommonConfig;
 import xin.vanilla.aotake.config.WarningConfig;
 import xin.vanilla.aotake.data.ChunkKey;
 import xin.vanilla.aotake.data.SweepResult;
 import xin.vanilla.aotake.data.player.PlayerSweepData;
+import xin.vanilla.aotake.data.world.ChunkVaultStorage;
 import xin.vanilla.aotake.data.world.WorldTrashData;
 import xin.vanilla.aotake.enums.EnumCommandType;
-import xin.vanilla.aotake.enums.EnumDustbinMode;
 import xin.vanilla.aotake.enums.EnumListType;
 import xin.vanilla.aotake.enums.EnumSelfCleanMode;
-import xin.vanilla.aotake.event.ServerEventHandler;
-import xin.vanilla.aotake.network.AotakeNetworkPacket;
-import xin.vanilla.aotake.network.NetworkInit;
+import xin.vanilla.aotake.event.EventHandlerProxy;
 import xin.vanilla.aotake.network.packet.DustbinPageSyncToClient;
+import xin.vanilla.aotake.notification.AotakeNotificationTypes;
 import xin.vanilla.banira.common.data.Component;
-import xin.vanilla.banira.common.data.KeyValue;
+import xin.vanilla.aotake.internal.common.AotakeServerRuntime;
 import xin.vanilla.banira.common.data.WorldCoordinate;
-import xin.vanilla.banira.common.enums.EnumI18nType;
 import xin.vanilla.banira.common.enums.EnumMCColor;
 import xin.vanilla.banira.common.util.*;
-import xin.vanilla.banira.internal.config.CustomConfig;
 
 import javax.annotation.Nullable;
-import java.io.File;
 import java.util.*;
-import java.util.function.Consumer;
+import java.util.stream.Collectors;
 
-@SuppressWarnings({"resource", "UnstableApiUsage"})
+
+@SuppressWarnings({"resource"})
 public class AotakeUtils {
     private static final Logger LOGGER = LogManager.getLogger();
 
@@ -100,476 +78,324 @@ public class AotakeUtils {
      */
     public static String getCommand(EnumCommandType type) {
         String prefix = AotakeUtils.getCommandPrefix();
-        return switch (type) {
-            case HELP -> prefix + " help";
-            case LANGUAGE -> prefix + " " + CommonConfig.get().command().commandLanguage();
-            case LANGUAGE_CONCISE -> isConciseEnabled(type) ? CommonConfig.get().command().commandLanguage() : "";
-            case VIRTUAL_OP -> prefix + " " + CommonConfig.get().command().commandVirtualOp();
-            case VIRTUAL_OP_CONCISE ->
-                    isConciseEnabled(type) ? CommonConfig.get().command().commandVirtualOp() : "";
-            case DUSTBIN_OPEN, DUSTBIN_OPEN_OTHER ->
-                    prefix + " " + CommonConfig.get().command().commandDustbinOpen();
-            case DUSTBIN_OPEN_CONCISE, DUSTBIN_OPEN_OTHER_CONCISE ->
-                    isConciseEnabled(type) ? CommonConfig.get().command().commandDustbinOpen() : "";
-            case DUSTBIN_CLEAR -> prefix + " " + CommonConfig.get().command().commandDustbinClear();
-            case DUSTBIN_CLEAR_CONCISE ->
-                    isConciseEnabled(type) ? CommonConfig.get().command().commandDustbinClear() : "";
-            case DUSTBIN_DROP -> prefix + " " + CommonConfig.get().command().commandDustbinDrop();
-            case DUSTBIN_DROP_CONCISE ->
-                    isConciseEnabled(type) ? CommonConfig.get().command().commandDustbinDrop() : "";
-            case CACHE_CLEAR -> prefix + " " + CommonConfig.get().command().commandCacheClear();
-            case CACHE_CLEAR_CONCISE ->
-                    isConciseEnabled(type) ? CommonConfig.get().command().commandCacheClear() : "";
-            case CACHE_DROP -> prefix + " " + CommonConfig.get().command().commandCacheDrop();
-            case CACHE_DROP_CONCISE ->
-                    isConciseEnabled(type) ? CommonConfig.get().command().commandCacheDrop() : "";
-            case SWEEP -> prefix + " " + CommonConfig.get().command().commandSweep();
-            case SWEEP_CONCISE -> isConciseEnabled(type) ? CommonConfig.get().command().commandSweep() : "";
-            case CLEAR_DROP -> prefix + " " + CommonConfig.get().command().commandClearDrop();
-            case CLEAR_DROP_CONCISE ->
-                    isConciseEnabled(type) ? CommonConfig.get().command().commandClearDrop() : "";
-            case DELAY_SWEEP -> prefix + " " + CommonConfig.get().command().commandDelaySweep();
-            case DELAY_SWEEP_CONCISE ->
-                    isConciseEnabled(type) ? CommonConfig.get().command().commandDelaySweep() : "";
-            case CHUNK_VAULT -> prefix + " " + CommonConfig.get().command().commandChunkVault();
-            case CHUNK_VAULT_CONCISE ->
-                    isConciseEnabled(type) ? CommonConfig.get().command().commandChunkVault() : "";
-            default -> "";
-        };
+        switch (type) {
+            case HELP:
+                return prefix + " help";
+            case LANGUAGE:
+                return prefix + " " + CommonConfig.get().command().commandLanguage();
+            case LANGUAGE_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandLanguage() : "";
+            case VIRTUAL_OP:
+                return prefix + " " + CommonConfig.get().command().commandVirtualOp();
+            case VIRTUAL_OP_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandVirtualOp() : "";
+            case DUSTBIN_OPEN:
+            case DUSTBIN_OPEN_OTHER:
+                return prefix + " " + CommonConfig.get().command().commandDustbinOpen();
+            case DUSTBIN_OPEN_CONCISE:
+            case DUSTBIN_OPEN_OTHER_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandDustbinOpen() : "";
+            case DUSTBIN_CLEAR:
+                return prefix + " " + CommonConfig.get().command().commandDustbinClear();
+            case DUSTBIN_CLEAR_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandDustbinClear() : "";
+            case DUSTBIN_DROP:
+                return prefix + " " + CommonConfig.get().command().commandDustbinDrop();
+            case DUSTBIN_DROP_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandDustbinDrop() : "";
+            case CACHE_CLEAR:
+                return prefix + " " + CommonConfig.get().command().commandCacheClear();
+            case CACHE_CLEAR_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandCacheClear() : "";
+            case CACHE_DROP:
+                return prefix + " " + CommonConfig.get().command().commandCacheDrop();
+            case CACHE_DROP_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandCacheDrop() : "";
+            case SWEEP:
+                return prefix + " " + CommonConfig.get().command().commandSweep();
+            case SWEEP_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandSweep() : "";
+            case CLEAR_DROP:
+                return prefix + " " + CommonConfig.get().command().commandClearDrop();
+            case CLEAR_DROP_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandClearDrop() : "";
+            case DELAY_SWEEP:
+                return prefix + " " + CommonConfig.get().command().commandDelaySweep();
+            case DELAY_SWEEP_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandDelaySweep() : "";
+            case CHUNK_VAULT:
+                return prefix + " " + CommonConfig.get().command().commandChunkVault();
+            case CHUNK_VAULT_CONCISE:
+                return isConciseEnabled(type) ? CommonConfig.get().command().commandChunkVault() : "";
+            default:
+                return "";
+        }
     }
 
     /**
      * 获取指令权限等级
      */
     public static int getCommandPermissionLevel(EnumCommandType type) {
-        return switch (type) {
-            case CONFIG, VIRTUAL_OP, VIRTUAL_OP_CONCISE -> CommonConfig.get().permission().permissionVirtualOp();
-            case DUSTBIN_OPEN, DUSTBIN_OPEN_CONCISE -> CommonConfig.get().permission().permissionDustbinOpen();
-            case DUSTBIN_OPEN_OTHER, DUSTBIN_OPEN_OTHER_CONCISE ->
-                    CommonConfig.get().permission().permissionDustbinOpenOther();
-            case DUSTBIN_CLEAR, DUSTBIN_CLEAR_CONCISE -> CommonConfig.get().permission().permissionDustbinClear();
-            case DUSTBIN_DROP, DUSTBIN_DROP_CONCISE -> CommonConfig.get().permission().permissionDustbinDrop();
-            case CACHE_CLEAR, CACHE_CLEAR_CONCISE -> CommonConfig.get().permission().permissionCacheClear();
-            case CACHE_DROP, CACHE_DROP_CONCISE -> CommonConfig.get().permission().permissionCacheDrop();
-            case SWEEP, SWEEP_CONCISE -> CommonConfig.get().permission().permissionSweep();
-            case CLEAR_DROP, CLEAR_DROP_CONCISE -> CommonConfig.get().permission().permissionClearDrop();
-            case DELAY_SWEEP, DELAY_SWEEP_CONCISE -> CommonConfig.get().permission().permissionDelaySweep();
-            case CHUNK_VAULT, CHUNK_VAULT_CONCISE -> CommonConfig.get().permission().permissionChunkVault();
-            case CATCH_PLAYER -> CommonConfig.get().permission().permissionCatchPlayer();
-            default -> 0;
-        };
+        switch (type) {
+            case CONFIG:
+            case VIRTUAL_OP:
+            case VIRTUAL_OP_CONCISE:
+                return CommonConfig.get().permission().permissionVirtualOp();
+            case DUSTBIN_OPEN:
+            case DUSTBIN_OPEN_CONCISE:
+                return CommonConfig.get().permission().permissionDustbinOpen();
+            case DUSTBIN_OPEN_OTHER:
+            case DUSTBIN_OPEN_OTHER_CONCISE:
+                return CommonConfig.get().permission().permissionDustbinOpenOther();
+            case DUSTBIN_CLEAR:
+            case DUSTBIN_CLEAR_CONCISE:
+                return CommonConfig.get().permission().permissionDustbinClear();
+            case DUSTBIN_DROP:
+            case DUSTBIN_DROP_CONCISE:
+                return CommonConfig.get().permission().permissionDustbinDrop();
+            case CACHE_CLEAR:
+            case CACHE_CLEAR_CONCISE:
+                return CommonConfig.get().permission().permissionCacheClear();
+            case CACHE_DROP:
+            case CACHE_DROP_CONCISE:
+                return CommonConfig.get().permission().permissionCacheDrop();
+            case SWEEP:
+            case SWEEP_CONCISE:
+                return CommonConfig.get().permission().permissionSweep();
+            case CLEAR_DROP:
+            case CLEAR_DROP_CONCISE:
+                return CommonConfig.get().permission().permissionClearDrop();
+            case DELAY_SWEEP:
+            case DELAY_SWEEP_CONCISE:
+                return CommonConfig.get().permission().permissionDelaySweep();
+            case CATCH_PLAYER:
+                return CommonConfig.get().permission().permissionCatchPlayer();
+            case CHUNK_VAULT:
+            case CHUNK_VAULT_CONCISE:
+                return CommonConfig.get().permission().permissionChunkVault();
+            default:
+                return 0;
+        }
     }
 
     /**
      * 判断指令是否启用简短模式
      */
     public static boolean isConciseEnabled(EnumCommandType type) {
-        return switch (type) {
-            case LANGUAGE, LANGUAGE_CONCISE -> CommonConfig.get().concise().conciseLanguage();
-            case VIRTUAL_OP, VIRTUAL_OP_CONCISE -> CommonConfig.get().concise().conciseVirtualOp();
-            case DUSTBIN_OPEN, DUSTBIN_OPEN_CONCISE, DUSTBIN_OPEN_OTHER, DUSTBIN_OPEN_OTHER_CONCISE ->
-                    CommonConfig.get().concise().conciseDustbinOpen();
-            case DUSTBIN_CLEAR, DUSTBIN_CLEAR_CONCISE -> CommonConfig.get().concise().conciseDustbinClear();
-            case DUSTBIN_DROP, DUSTBIN_DROP_CONCISE -> CommonConfig.get().concise().conciseDustbinDrop();
-            case CACHE_CLEAR, CACHE_CLEAR_CONCISE -> CommonConfig.get().concise().conciseCacheClear();
-            case CACHE_DROP, CACHE_DROP_CONCISE -> CommonConfig.get().concise().conciseCacheDrop();
-            case SWEEP, SWEEP_CONCISE -> CommonConfig.get().concise().conciseSweep();
-            case CLEAR_DROP, CLEAR_DROP_CONCISE -> CommonConfig.get().concise().conciseClearDrop();
-            case DELAY_SWEEP, DELAY_SWEEP_CONCISE -> CommonConfig.get().concise().conciseDelaySweep();
-            case CHUNK_VAULT, CHUNK_VAULT_CONCISE -> CommonConfig.get().concise().conciseChunkVault();
-            default -> false;
-        };
+        switch (type) {
+            case LANGUAGE:
+            case LANGUAGE_CONCISE:
+                return CommonConfig.get().concise().conciseLanguage();
+            case VIRTUAL_OP:
+            case VIRTUAL_OP_CONCISE:
+                return CommonConfig.get().concise().conciseVirtualOp();
+            case DUSTBIN_OPEN:
+            case DUSTBIN_OPEN_CONCISE:
+            case DUSTBIN_OPEN_OTHER:
+            case DUSTBIN_OPEN_OTHER_CONCISE:
+                return CommonConfig.get().concise().conciseDustbinOpen();
+            case DUSTBIN_CLEAR:
+            case DUSTBIN_CLEAR_CONCISE:
+                return CommonConfig.get().concise().conciseDustbinClear();
+            case DUSTBIN_DROP:
+            case DUSTBIN_DROP_CONCISE:
+                return CommonConfig.get().concise().conciseDustbinDrop();
+            case CACHE_CLEAR:
+            case CACHE_CLEAR_CONCISE:
+                return CommonConfig.get().concise().conciseCacheClear();
+            case CACHE_DROP:
+            case CACHE_DROP_CONCISE:
+                return CommonConfig.get().concise().conciseCacheDrop();
+            case SWEEP:
+            case SWEEP_CONCISE:
+                return CommonConfig.get().concise().conciseSweep();
+            case CLEAR_DROP:
+            case CLEAR_DROP_CONCISE:
+                return CommonConfig.get().concise().conciseClearDrop();
+            case DELAY_SWEEP:
+            case DELAY_SWEEP_CONCISE:
+                return CommonConfig.get().concise().conciseDelaySweep();
+            case CHUNK_VAULT:
+            case CHUNK_VAULT_CONCISE:
+                return CommonConfig.get().concise().conciseChunkVault();
+            default:
+                return false;
+        }
     }
 
     /**
      * 判断是否拥有指令权限
      */
     public static boolean hasCommandPermission(CommandSourceStack source, EnumCommandType type) {
-        return source.hasPermission(getCommandPermissionLevel(type)) || hasVirtualPermission(source.getEntity(), type);
+        return source.hasPermission(getCommandPermissionLevel(type)) || CommandUtils.hasVirtualPermission(source.getEntity(), type);
     }
 
     /**
      * 判断是否拥有指令权限
      */
     public static boolean hasCommandPermission(Player player, EnumCommandType type) {
-        return player.hasPermissions(getCommandPermissionLevel(type)) || hasVirtualPermission(player, type);
-    }
-
-    /**
-     * 判断是否拥有指令权限
-     */
-    public static boolean hasVirtualPermission(Entity source, EnumCommandType type) {
-        if (source instanceof Player player) {
-            return VirtualPermissionManager.getVirtualPermission(player, EnumCommandType.class).contains(type);
-        }
-        return false;
+        return player.hasPermissions(getCommandPermissionLevel(type)) || CommandUtils.hasVirtualPermission(player, type);
     }
 
     /**
      * 获取传送指令
      */
     public static String genTeleportCommand(WorldCoordinate coordinate) {
-        // if (ModList.get().isLoaded("narcissus_farewell")) {
-        //     return String.format("/%s %s %s %s safe %s"
-        //             , CompatNarcissus.getTpCommand()
-        //             , coordinate.getXInt()
-        //             , coordinate.getYInt()
-        //             , coordinate.getZInt()
-        //             , coordinate.getDimensionResourceId()
-        //     );
-        // } else {
-        return String.format("/execute in %s as @s run tp %s %s %s"
-                , coordinate.dimensionId()
-                , coordinate.xInt()
-                , coordinate.yInt()
-                , coordinate.zInt()
-        );
-        // }
-    }
-
-    /**
-     * 执行指令
-     */
-    public static boolean executeCommand(@NonNull ServerPlayer player, @NonNull String command, int permission, boolean suppressedOutput) {
-        boolean result = false;
-        try {
-            MinecraftServer server = player.getServer();
-            CommandSourceStack commandSourceStack = player.createCommandSourceStack();
-            if (permission > 0) {
-                commandSourceStack = commandSourceStack.withPermission(permission);
-            }
-            if (suppressedOutput) {
-                commandSourceStack = commandSourceStack.withSuppressedOutput();
-            }
-            result = server.getCommands().performPrefixedCommand(commandSourceStack, command) > 0;
-        } catch (Exception e) {
-            LOGGER.error("Failed to execute command: {}", command, e);
+        if (FabricLoader.getInstance().isModLoaded("narcissus_farewell")) {
+            return String.format("/%s %s %s %s safe %s"
+                    , CompatNarcissus.getTpCommand()
+                    , coordinate.xInt()
+                    , coordinate.yInt()
+                    , coordinate.zInt()
+                    , coordinate.dimensionId()
+            );
+        } else {
+            return String.format("/execute in %s as @s run tp %s %s %s"
+                    , coordinate.dimensionId()
+                    , coordinate.xInt()
+                    , coordinate.yInt()
+                    , coordinate.zInt()
+            );
         }
-        return result;
-    }
-
-    /**
-     * 执行指令
-     */
-    public static boolean executeCommand(@NonNull ServerPlayer player, @NonNull String command) {
-        return executeCommand(player, command, 0, false);
-    }
-
-    /**
-     * 执行指令
-     */
-    public static boolean executeCommandNoOutput(@NonNull ServerPlayer player, @NonNull String command) {
-        return executeCommandNoOutput(player, command, 0);
-    }
-
-    /**
-     * 执行指令
-     */
-    public static boolean executeCommandNoOutput(@NonNull ServerPlayer player, @NonNull String command, int permission) {
-        return executeCommand(player, command, permission, true);
-    }
-
-    public static void refreshPermission(@NonNull ServerPlayer player) {
-        MinecraftServer server = player.getServer();
-        if (server == null) {
-            server = AotakeSweep.serverInstance().key();
-        }
-        server.getPlayerList().sendPlayerPermissionLevel(player);
     }
 
     // endregion 指令相关
 
 
-    // region 消息相关
-
-    /**
-     * 广播消息
-     *
-     * @param server  发送者
-     * @param message 消息
-     */
-    public static void broadcastMessage(MinecraftServer server, Component message) {
-        String lang = CommonConfig.get().base().common().defaultLanguage();
-        server.getPlayerList().broadcastSystemMessage(net.minecraft.network.chat.Component.translatable("chat.type.announcement", net.minecraft.network.chat.Component.literal("Server"), message.toVanilla(lang)), false);
-    }
-
-    /**
-     * 发送消息
-     *
-     * @param player  玩家
-     * @param message 消息
-     */
-    public static void sendMessage(Player player, Component message) {
-        player.sendSystemMessage(message.toVanilla(AotakeUtils.getPlayerLanguage(player)));
-    }
-
-    /**
-     * 发送翻译消息
-     *
-     * @param player 玩家
-     * @param key    翻译键
-     * @param args   参数
-     */
-    public static void sendTranslatableMessage(Player player, String key, Object... args) {
-        String lang = AotakeUtils.getPlayerLanguage(player);
-        player.sendSystemMessage(AotakeComponent.get().transLang(lang, EnumI18nType.FORMAT, key, args).toVanilla(lang));
-    }
-
-    /**
-     * 发送翻译消息
-     *
-     * @param source  指令来源
-     * @param success 是否成功
-     * @param key     翻译键
-     * @param args    参数
-     */
-    public static void sendTranslatableMessage(CommandSourceStack source, boolean success, String key, Object... args) {
-        if (source.getEntity() != null && source.getEntity() instanceof ServerPlayer) {
-            try {
-                sendTranslatableMessage(source.getPlayerOrException(), key, args);
-            } catch (CommandSyntaxException ignored) {
-            }
-        } else if (success) {
-            String lang = CommonConfig.get().base().common().defaultLanguage();
-            source.sendSuccess(AotakeComponent.get().transLang(lang, EnumI18nType.FORMAT, key, args).toVanilla(lang), false);
-        } else {
-            source.sendFailure(AotakeComponent.get().transLang(CommonConfig.get().base().common().defaultLanguage(), EnumI18nType.FORMAT, key, args).toVanilla(CommonConfig.get().base().common().defaultLanguage()));
-        }
-    }
-
-    /**
-     * 发送操作栏消息
-     */
-    public static void sendActionBarMessage(ServerPlayer player, Component message) {
-        player.displayClientMessage(message.toVanilla(AotakeUtils.getPlayerLanguage(player)), true);
-    }
-
-    /**
-     * 广播数据包至所有玩家
-     *
-     * @param packet 数据包
-     */
-    public static void broadcastPacket(Packet<?> packet) {
-        AotakeSweep.serverInstance().key().getPlayerList().getPlayers().forEach(player -> player.connection.send(packet));
-    }
-
-    /**
-     * 发送 Aotake 已注册网络包至服务器（客户端调用）。
-     */
-    @Environment(EnvType.CLIENT)
-    public static void sendPacketToServer(AotakeNetworkPacket packet) {
-        Minecraft mc = Minecraft.getInstance();
-        if (mc.player == null) {
-            return;
-        }
-        if (!PlayerUtils.isRemoteServerModInstalled(mc.player, AotakeSweep.MODID)) {
-            return;
-        }
-        ResourceLocation channel = NetworkInit.HANDLER.channel();
-        if (!ClientPlayNetworking.canSend(channel)) {
-            return;
-        }
-        ClientPlayNetworking.send(channel, NetworkInit.HANDLER.encode(packet));
-    }
-
-    /**
-     * 发送 Aotake 已注册网络包至玩家（服务端调用）。
-     */
-    public static void sendPacketToPlayer(AotakeNetworkPacket packet, ServerPlayer player) {
-        ResourceLocation channel = NetworkInit.HANDLER.channel();
-        if (!ServerPlayNetworking.canSend(player, channel)) {
-            return;
-        }
-        if (!PlayerUtils.isRemoteClientModInstalled(player, AotakeSweep.MODID)) {
-            return;
-        }
-        ServerPlayNetworking.send(player, channel, NetworkInit.HANDLER.encode(packet));
-    }
-
-    public static void sendPacketToPlayer(ServerPlayer player, AotakeNetworkPacket packet) {
-        sendPacketToPlayer(packet, player);
-    }
-
-    // endregion 消息相关
-
-
-    // region 玩家语言相关
-
-    public static String getPlayerLanguage(@NonNull Player player) {
-        try {
-            String language;
-            if (player.isLocalPlayer()) {
-                language = CustomConfig.getPlayerLanguageClient(getPlayerUUIDString(player));
-            } else {
-                language = CustomConfig.getPlayerLanguage(getPlayerUUIDString(player));
-            }
-            return AotakeUtils.getValidLanguage(player, language);
-        } catch (IllegalArgumentException i) {
-            return CommonConfig.get().base().common().defaultLanguage();
-        }
-    }
-
-    public static String getValidLanguage(@Nullable Player player, @Nullable String language) {
-        String result;
-        if (StringUtils.isNullOrEmptyEx(language) || "client".equalsIgnoreCase(language)) {
-            if (player instanceof ServerPlayer) {
-                result = AotakeUtils.getServerPlayerLanguage((ServerPlayer) player);
-            } else {
-                result = AotakeUtils.getClientLanguage();
-            }
-        } else if ("server".equalsIgnoreCase(language)) {
-            result = CommonConfig.get().base().common().defaultLanguage();
-        } else {
-            result = language;
-        }
-        return result;
-    }
-
-    public static String getServerPlayerLanguage(ServerPlayer player) {
-        return PlayerLanguageManager.get(player);
-    }
-
-    public static String getClientLanguage() {
-        return Minecraft.getInstance().getLanguageManager().getSelected().getCode();
-    }
-
-    // endregion 玩家语言相关
-
-
     // region 扫地
 
-    private static List<BlockState> SAFE_BLOCKS_STATE;
-    private static List<String> SAFE_BLOCKS;
-    private static List<BlockState> SAFE_BLOCKS_BELOW_STATE;
-    private static List<String> SAFE_BLOCKS_BELOW;
-    private static List<BlockState> SAFE_BLOCKS_ABOVE_STATE;
-    private static List<String> SAFE_BLOCKS_ABOVE;
+    private static Set<BlockState> SAFE_BLOCKS_STATE;
+    private static Set<String> SAFE_BLOCKS;
+    private static Set<BlockState> SAFE_BLOCKS_BELOW_STATE;
+    private static Set<String> SAFE_BLOCKS_BELOW;
+    private static Set<BlockState> SAFE_BLOCKS_ABOVE_STATE;
+    private static Set<String> SAFE_BLOCKS_ABOVE;
 
     private static void initSafeBlocks() {
         if (SAFE_BLOCKS_STATE == null) {
-            SAFE_BLOCKS_STATE = CommonConfig.get().base().safe().safeBlocks().stream()
-                    .map(AotakeUtils::deserializeBlockState)
+            SAFE_BLOCKS_STATE = new HashSet<>(CommonConfig.get().base().safe().safeBlocks().stream()
+                    .map(BlockUtils::deserializeBlockState)
                     .filter(Objects::nonNull)
                     .distinct()
-                    .toList();
+                    .collect(Collectors.toList()));
         }
         if (SAFE_BLOCKS == null) {
-            SAFE_BLOCKS = CommonConfig.get().base().safe().safeBlocks().stream()
+            SAFE_BLOCKS = new HashSet<>(CommonConfig.get().base().safe().safeBlocks().stream()
                     .filter(Objects::nonNull)
+                    .map(s -> (String) s)
                     .distinct()
-                    .toList();
+                    .collect(Collectors.toList()));
         }
         if (SAFE_BLOCKS_BELOW_STATE == null) {
-            SAFE_BLOCKS_BELOW_STATE = CommonConfig.get().base().safe().safeBlocksBelow().stream()
-                    .map(AotakeUtils::deserializeBlockState)
+            SAFE_BLOCKS_BELOW_STATE = new HashSet<>(CommonConfig.get().base().safe().safeBlocksBelow().stream()
+                    .map(BlockUtils::deserializeBlockState)
                     .filter(Objects::nonNull)
                     .distinct()
-                    .toList();
+                    .collect(Collectors.toList()));
         }
         if (SAFE_BLOCKS_BELOW == null) {
-            SAFE_BLOCKS_BELOW = CommonConfig.get().base().safe().safeBlocksBelow().stream()
+            SAFE_BLOCKS_BELOW = new HashSet<>(CommonConfig.get().base().safe().safeBlocksBelow().stream()
                     .filter(Objects::nonNull)
+                    .map(s -> (String) s)
                     .distinct()
-                    .toList();
+                    .collect(Collectors.toList()));
         }
         if (SAFE_BLOCKS_ABOVE_STATE == null) {
-            SAFE_BLOCKS_ABOVE_STATE = CommonConfig.get().base().safe().safeBlocksAbove().stream()
-                    .map(AotakeUtils::deserializeBlockState)
+            SAFE_BLOCKS_ABOVE_STATE = new HashSet<>(CommonConfig.get().base().safe().safeBlocksAbove().stream()
+                    .map(BlockUtils::deserializeBlockState)
                     .filter(Objects::nonNull)
                     .distinct()
-                    .toList();
+                    .collect(Collectors.toList()));
         }
         if (SAFE_BLOCKS_ABOVE == null) {
-            SAFE_BLOCKS_ABOVE = CommonConfig.get().base().safe().safeBlocksAbove().stream()
+            SAFE_BLOCKS_ABOVE = new HashSet<>(CommonConfig.get().base().safe().safeBlocksAbove().stream()
                     .filter(Objects::nonNull)
+                    .map(s -> (String) s)
                     .distinct()
-                    .toList();
+                    .collect(Collectors.toList()));
         }
     }
 
-    public static List<Entity> getAllEntities() {
-        List<Entity> entities = new ArrayList<>();
-        KeyValue<MinecraftServer, Boolean> serverInstance = AotakeSweep.serverInstance();
-        if (serverInstance.val()) {
-            serverInstance.key().getAllLevels()
-                    .forEach(level -> level.getAllEntities().forEach(entities::add)
-                    );
-        }
-        return entities;
+    /**
+     * 配置重载后清理派生集合，避免继续使用旧安全方块规则。
+     */
+    public static void clearEntityFilterCaches() {
+        SAFE_BLOCKS_STATE = null;
+        SAFE_BLOCKS = null;
+        SAFE_BLOCKS_BELOW_STATE = null;
+        SAFE_BLOCKS_BELOW = null;
+        SAFE_BLOCKS_ABOVE_STATE = null;
+        SAFE_BLOCKS_ABOVE = null;
+        AotakeSweep.getEntityFilter().clear();
     }
 
     public static boolean isJunkEntity(Entity entity, boolean chuck) {
-        boolean result = false;
-        if (entity != null && !(entity instanceof Player)) {
-            if (chuck) {
-                // 空列表
-                if (CollectionUtils.isNullOrEmpty(CommonConfig.get().base().chunk().chunkCheckEntityList())) {
-                    result = EnumListType.WHITE == CommonConfig.get().base().chunk().chunkCheckEntityListMode();
-                }
-                // 黑名单模式
-                else if (EnumListType.BLACK == CommonConfig.get().base().chunk().chunkCheckEntityListMode()) {
-                    result = AotakeSweep.entityFilter().validEntity(CommonConfig.get().base().chunk().chunkCheckEntityList(), entity);
-                }
-                // 白名单模式
-                else {
-                    result = !AotakeSweep.entityFilter().validEntity(CommonConfig.get().base().chunk().chunkCheckEntityList(), entity);
-                }
-            } else {
-                // 空列表
-                if (CollectionUtils.isNullOrEmpty(CommonConfig.get().base().sweep().entityList())) {
-                    result = EnumListType.WHITE == CommonConfig.get().base().sweep().entityListMode();
-                }
-                // 黑名单模式
-                else if (EnumListType.BLACK == CommonConfig.get().base().sweep().entityListMode()) {
-                    result = AotakeSweep.entityFilter().validEntity(CommonConfig.get().base().sweep().entityList(), entity);
-                }
-                // 白名单模式
-                else {
-                    result = !AotakeSweep.entityFilter().validEntity(CommonConfig.get().base().sweep().entityList(), entity);
-                }
-            }
-        }
-        return result;
+        CommonConfig.BaseView base = CommonConfig.get().base();
+        List<String> rules = chuck ? base.chunk().chunkCheckEntityList() : base.sweep().entityList();
+        EnumListType mode = chuck ? base.chunk().chunkCheckEntityListMode() : base.sweep().entityListMode();
+        return isJunkEntity(entity, CollectionUtils.isNullOrEmpty(rules), mode,
+                AotakeSweep.getEntityFilter().compile(rules));
     }
 
-    public static boolean isSafeEntity(Map<KeyValue<Level, BlockPos>, BlockState> blockStateCache, Entity entity) {
-        Level level = entity.getLevel();
+    private static boolean isJunkEntity(Entity entity, boolean emptyRules, EnumListType mode,
+                                        EntityFilter.Matcher matcher) {
+        if (entity == null || entity instanceof Player) {
+            return false;
+        }
+        if (emptyRules) {
+            return mode == EnumListType.WHITE;
+        }
+        boolean matched = matcher.matches(entity);
+        return mode == EnumListType.BLACK ? matched : !matched;
+    }
+
+    public static boolean isSafeEntity(Map<Level, Map<BlockPos, BlockState>> blockStateCache, Entity entity) {
+        Level level = entity.level;
+        BlockPos position = entity.blockPosition();
 
         boolean stateFlag = false;
         if (!SAFE_BLOCKS.isEmpty() || !SAFE_BLOCKS_STATE.isEmpty()) {
-            BlockState state = blockStateCache.computeIfAbsent(new KeyValue<>(level, entity.blockPosition())
-                    , pair -> pair.key().getBlockState(pair.val()));
-            stateFlag = SAFE_BLOCKS.contains(AotakeUtils.getBlockRegistryName(state))
+            BlockState state = cachedBlockState(blockStateCache, level, position);
+            stateFlag = SAFE_BLOCKS.contains(BlockUtils.getBlockRegistryString(state))
                     || SAFE_BLOCKS_STATE.contains(state);
         }
 
         boolean belowFlag = false;
         if (!SAFE_BLOCKS_BELOW.isEmpty() || !SAFE_BLOCKS_BELOW_STATE.isEmpty()) {
-            BlockState below = blockStateCache.computeIfAbsent(new KeyValue<>(level, entity.blockPosition().below())
-                    , pair -> pair.key().getBlockState(pair.val()));
-            belowFlag = SAFE_BLOCKS_BELOW.contains(AotakeUtils.getBlockRegistryName(below))
+            BlockState below = cachedBlockState(blockStateCache, level, position.below());
+            belowFlag = SAFE_BLOCKS_BELOW.contains(BlockUtils.getBlockRegistryString(below))
                     || SAFE_BLOCKS_BELOW_STATE.contains(below);
         }
 
         boolean aboveFlag = false;
         if (!SAFE_BLOCKS_ABOVE.isEmpty() || !SAFE_BLOCKS_ABOVE_STATE.isEmpty()) {
-            BlockState above = blockStateCache.computeIfAbsent(new KeyValue<>(level, entity.blockPosition().above())
-                    , pair -> pair.key().getBlockState(pair.val()));
-            aboveFlag = SAFE_BLOCKS_ABOVE.contains(AotakeUtils.getBlockRegistryName(above))
+            BlockState above = cachedBlockState(blockStateCache, level, position.above());
+            aboveFlag = SAFE_BLOCKS_ABOVE.contains(BlockUtils.getBlockRegistryString(above))
                     || SAFE_BLOCKS_ABOVE_STATE.contains(above);
         }
 
         return stateFlag || belowFlag || aboveFlag;
     }
 
+    private static BlockState cachedBlockState(Map<Level, Map<BlockPos, BlockState>> cache,
+                                               Level level, BlockPos position) {
+        return cache.computeIfAbsent(level, ignored -> new HashMap<>())
+                .computeIfAbsent(position, level::getBlockState);
+    }
+
     public static List<Entity> getAllEntitiesByFilter(@Nullable List<Entity> entities, boolean chuck) {
         LOGGER.debug("Entity filter started at {}", System.currentTimeMillis());
         if (CollectionUtils.isNullOrEmpty(entities)) {
-            entities = getAllEntities();
+            entities = EntityUtils.getAllEntities();
         }
         initSafeBlocks();
 
-        Map<KeyValue<Level, BlockPos>, BlockState> blockStateCache = new HashMap<>();
+        Map<Level, Map<BlockPos, BlockState>> blockStateCache = new IdentityHashMap<>();
+        CommonConfig.BaseView base = CommonConfig.get().base();
+        List<String> rules = chuck ? base.chunk().chunkCheckEntityList() : base.sweep().entityList();
+        EnumListType listMode = chuck ? base.chunk().chunkCheckEntityListMode() : base.sweep().entityListMode();
+        boolean emptyRules = CollectionUtils.isNullOrEmpty(rules);
+        EntityFilter.Matcher matcher = AotakeSweep.getEntityFilter().compile(rules);
 
         boolean hasSafeRules = !SAFE_BLOCKS.isEmpty()
                 || !SAFE_BLOCKS_STATE.isEmpty()
@@ -578,38 +404,32 @@ public class AotakeUtils {
                 || !SAFE_BLOCKS_ABOVE.isEmpty()
                 || !SAFE_BLOCKS_ABOVE_STATE.isEmpty();
 
-        List<Entity> filtered = new ArrayList<>(entities.size());
+        List<EntityScanEntry> scanned = new ArrayList<>(entities.size());
         Map<String, Integer> nonJunkTypeCounts = new HashMap<>();
         Map<ChunkKey, Integer> safeChunkCounts = new HashMap<>();
-        IdentityHashMap<Entity, Boolean> junkCache = new IdentityHashMap<>();
-        IdentityHashMap<Entity, Boolean> safeCache = new IdentityHashMap<>();
-        IdentityHashMap<Entity, String> typeCache = new IdentityHashMap<>();
-        IdentityHashMap<Entity, ChunkKey> chunkKeyCache = new IdentityHashMap<>();
 
         LOGGER.debug("Entity exceeded filter started at {}", System.currentTimeMillis());
         for (Entity entity : entities) {
             if (entity instanceof Player) continue;
-            filtered.add(entity);
 
             boolean safe = hasSafeRules && isSafeEntity(blockStateCache, entity);
-            safeCache.put(entity, safe);
+            ChunkKey chunkKey = null;
             if (safe) {
-                ChunkKey key = ChunkKey.of(entity);
-                chunkKeyCache.put(entity, key);
-                safeChunkCounts.merge(key, 1, Integer::sum);
+                chunkKey = ChunkKey.of(entity);
+                safeChunkCounts.merge(chunkKey, 1, Integer::sum);
             }
 
-            boolean junk = isJunkEntity(entity, chuck);
-            junkCache.put(entity, junk);
+            boolean junk = isJunkEntity(entity, emptyRules, listMode, matcher);
+            String type = null;
             if (!junk) {
-                String type = getEntityTypeRegistryName(entity);
-                typeCache.put(entity, type);
+                type = EntityUtils.getEntityRegistryString(entity);
                 nonJunkTypeCounts.merge(type, 1, Integer::sum);
             }
+            scanned.add(new EntityScanEntry(entity, safe, junk, type, chunkKey));
         }
 
         LOGGER.debug("Entity safe filter started at {}", System.currentTimeMillis());
-        int typeLimit = CommonConfig.get().base().sweep().entityListLimit();
+        int typeLimit = base.sweep().entityListLimit();
         Set<String> exceededTypes = new HashSet<>();
         for (Map.Entry<String, Integer> entry : nonJunkTypeCounts.entrySet()) {
             if (entry.getValue() > typeLimit) {
@@ -617,7 +437,7 @@ public class AotakeUtils {
             }
         }
 
-        int safeLimit = CommonConfig.get().base().safe().safeBlocksEntityLimit();
+        int safeLimit = base.safe().safeBlocksEntityLimit();
         Set<ChunkKey> exceededChunks = new HashSet<>();
         for (Map.Entry<ChunkKey, Integer> entry : safeChunkCounts.entrySet()) {
             if (entry.getValue() > safeLimit) {
@@ -627,38 +447,37 @@ public class AotakeUtils {
 
         LOGGER.debug("Entity junk filter started at {}", System.currentTimeMillis());
         List<Entity> entityList = new ArrayList<>();
-        for (Entity entity : filtered) {
-            boolean safe = safeCache.getOrDefault(entity, false);
-            boolean junk = junkCache.getOrDefault(entity, false);
-            boolean exceededType = false;
-            if (!junk && !exceededTypes.isEmpty()) {
-                String type = typeCache.get(entity);
-                if (type == null) {
-                    type = getEntityTypeRegistryName(entity);
-                    typeCache.put(entity, type);
-                }
-                exceededType = exceededTypes.contains(type);
-            }
-            boolean exceededSafe = false;
-            if (safe && !exceededChunks.isEmpty()) {
-                ChunkKey key = chunkKeyCache.get(entity);
-                if (key == null) {
-                    key = ChunkKey.of(entity);
-                    chunkKeyCache.put(entity, key);
-                }
-                exceededSafe = exceededChunks.contains(key);
-            }
-            if ((!safe && junk) || exceededType || exceededSafe) {
-                entityList.add(entity);
+        for (EntityScanEntry entry : scanned) {
+            boolean exceededType = !entry.junk && exceededTypes.contains(entry.type);
+            boolean exceededSafe = entry.safe && exceededChunks.contains(entry.chunkKey);
+            if ((!entry.safe && entry.junk) || exceededType || exceededSafe) {
+                entityList.add(entry.entity);
             }
         }
         LOGGER.debug("Entity filter finished at {}", System.currentTimeMillis());
         return entityList;
     }
 
+    private static final class EntityScanEntry {
+        private final Entity entity;
+        private final boolean safe;
+        private final boolean junk;
+        private final String type;
+        private final ChunkKey chunkKey;
+
+        private EntityScanEntry(Entity entity, boolean safe, boolean junk,
+                                String type, ChunkKey chunkKey) {
+            this.entity = entity;
+            this.safe = safe;
+            this.junk = junk;
+            this.type = type;
+            this.chunkKey = chunkKey;
+        }
+    }
+
     public static void sweep() {
         LOGGER.debug("Sweep started at {}", System.currentTimeMillis());
-        List<Entity> entities = getAllEntities();
+        List<Entity> entities = EntityUtils.getAllEntities();
         AotakeUtils.sweep(entities, false);
         LOGGER.debug("Sweep finished at {}", System.currentTimeMillis());
     }
@@ -670,11 +489,18 @@ public class AotakeUtils {
      * @param filtered 实体列表是否已过滤
      */
     public static void sweep(List<Entity> entities, boolean filtered) {
-        KeyValue<MinecraftServer, Boolean> serverInstance = AotakeSweep.serverInstance();
-        // 服务器已关闭
-        if (!serverInstance.val()) return;
+        sweep(entities, filtered, false);
+    }
 
-        List<ServerPlayer> players = serverInstance.key().getPlayerList().getPlayers();
+    /**
+     * @param chunkOverloadVault 为 true 时，回收物品写入区块暂存目录（若配置启用），而非全局垃圾箱。
+     */
+    public static void sweep(List<Entity> entities, boolean filtered, boolean chunkOverloadVault) {
+        MinecraftServer server = AotakeServerRuntime.currentServer();
+        // 服务器已关闭
+        if (!AotakeServerRuntime.isRunning() || server == null) return;
+
+        List<ServerPlayer> players = server.getPlayerList().getPlayers();
 
         try {
             // 若服务器没有玩家
@@ -688,7 +514,7 @@ public class AotakeUtils {
             // if (CollectionUtils.isNotNullOrEmpty(list)) {
             // 清空旧的物品
             if (CommonConfig.get().base().dustbin().selfCleanMode().contains(EnumSelfCleanMode.SWEEP_CLEAR)) {
-                switch (EnumDustbinMode.valueOfOrDefault(CommonConfig.get().base().dustbin().dustbinBlockMode())) {
+                switch (CommonConfig.get().base().dustbin().dustbinBlockMode()) {
                     case VIRTUAL: {
                         clearVirtualDustbin();
                     }
@@ -703,36 +529,40 @@ public class AotakeUtils {
                     }
                 }
             }
-            AotakeSweep.entitySweeper().addDrops(list, new SweepResult());
+            SweepResult sweepResult = new SweepResult().setChunkOverloadVault(chunkOverloadVault);
+            if (chunkOverloadVault && CommonConfig.get().base().chunk().chunkVaultEnabled()) {
+                sweepResult.setChunkVaultTimePrefix(ChunkVaultStorage.vaultTimePrefix());
+                sweepResult.setChunkVaultRunId(ChunkVaultStorage.newVaultRunId());
+            }
+            AotakeSweep.getEntitySweeper().addDrops(list, sweepResult);
             // }
 
         } catch (Exception e) {
             LOGGER.error(e);
             for (ServerPlayer p : players) {
-                String language = AotakeUtils.getPlayerLanguage(p);
+                String language = AotakeLang.getPlayerLanguage(p);
                 Component msg = getWarningMessage("error", language, null);
                 PlayerSweepData playerData = PlayerSweepData.getData(p);
                 if (playerData.isShowSweepResult()) {
-                    AotakeUtils.sendMessage(p, AotakeComponent.get().empty()
-                            .append(msg)
-                            .append(AotakeComponent.get().literal("[x]")
-                                    .color(EnumMCColor.RED.getColor())
-                                    .hoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT
-                                            , AotakeComponent.get().trans(EnumI18nType.WORD, "not_show_button").toVanilla(language))
+                    MessageUtils.sendNotification(p, AotakeComponent.get().empty()
+                                    .append(msg)
+                                    .append(AotakeComponent.get().literal("[x]")
+                                            .color(EnumMCColor.RED.getColor())
+                                            .hoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT
+                                                    , AotakeComponent.get().transAuto("not_show_button")
+                                                    .toVanilla(language))
+                                            )
+                                            .clickEvent(new ClickEvent(ClickEvent.Action.RUN_COMMAND
+                                                    , "/" + AotakeUtils.getCommandPrefix() + " config player showSweepResult change")
+                                            )
                                     )
-                                    .clickEvent(new ClickEvent(ClickEvent.Action.RUN_COMMAND
-                                            , "/" + AotakeUtils.getCommandPrefix() + " config player showSweepResult change")
-                                    )
-                            )
-                    );
-                } else {
-                    AotakeUtils.sendActionBarMessage(p, msg);
+                            , AotakeNotificationTypes.SWEEP_RESULT_INTERACTIVE);
                 }
                 if (playerData.isEnableWarningVoice()) {
                     String voice = getWarningVoice("error");
                     float volume = CommonConfig.get().base().sweep().sweepWarningVoiceVolume() / 100f;
                     if (StringUtils.isNotNullOrEmpty(voice)) {
-                        AotakeUtils.executeCommandNoOutput(p, String.format("playsound %s voice @s ~ ~ ~ %s", voice, volume));
+                        CommandUtils.executeCommandNoOutput(p, String.format("playsound %s voice @s ~ ~ ~ %s", voice, volume));
                     }
                 }
             }
@@ -750,7 +580,10 @@ public class AotakeUtils {
         for (String pos : CommonConfig.get().base().dustbin().dustbinBlockPositions()) {
             WorldCoordinate coordinate = WorldCoordinate.fromString(pos);
             if (coordinate != null) {
-                AotakeUtils.clearStorage(AotakeUtils.getBlockItemHandler(coordinate));
+                Container handler = getBlockItemHandler(coordinate);
+                if (handler != null) {
+                    handler.clearContent();
+                }
             }
         }
     }
@@ -773,9 +606,7 @@ public class AotakeUtils {
             CompoundTag aotake = tag.getCompound(AotakeSweep.MODID);
             if (aotake.contains("entity")) {
                 try {
-                    CompoundTag entityTag = aotake.getCompound("entity");
-                    sanitizeCapturedEntityTag(entityTag);
-                    result = EntityType.loadEntityRecursive(entityTag, level, e -> e);
+                    result = EntityType.loadEntityRecursive(aotake.getCompound("entity"), level, e -> e);
                 } catch (Exception e) {
                     LOGGER.error("Failed to load entity from item stack: {}", itemStack, e);
                 }
@@ -844,11 +675,11 @@ public class AotakeUtils {
             Map<String, List<String>> group = getActiveWarnGroup();
             String text = CollectionUtils.getRandomElement(group.get(key));
             if (StringUtils.isNotNullOrEmpty(text) && text.startsWith("message.aotake_sweep.")) {
-                text = Translator.of(AotakeSweep.MODID).getTranslation(text, lang);
+                text = AotakeLang.get().getTranslation(text, lang);
             }
             if (NumberUtils.toInt(key) > 0) {
                 if (StringUtils.isNullOrEmpty(text)) {
-                    text = AotakeComponent.get().trans(EnumI18nType.FORMAT, "cleanup_will_start", key).getString(lang);
+                    text = AotakeComponent.get().transAuto("cleanup_will_start", key).toVanilla(lang).getString();
                 } else {
                     text = StringUtils.format(text, key);
                 }
@@ -872,7 +703,7 @@ public class AotakeUtils {
         if (warnGroups.isEmpty()) {
             return Collections.emptyMap();
         }
-        long sweepTime = ServerEventHandler.getNextSweepTime();
+        long sweepTime = EventHandlerProxy.getNextSweepTime();
         if (activeWarnGroupSweepTime != sweepTime || activeWarnGroup.isEmpty()) {
             activeWarnGroupSweepTime = sweepTime;
             Map<String, List<String>> selected = CollectionUtils.getRandomElement(warnGroups);
@@ -885,7 +716,7 @@ public class AotakeUtils {
         if (voiceGroups.isEmpty()) {
             return Collections.emptyMap();
         }
-        long sweepTime = ServerEventHandler.getNextSweepTime();
+        long sweepTime = EventHandlerProxy.getNextSweepTime();
         if (activeVoiceGroupSweepTime != sweepTime || activeVoiceGroup.isEmpty()) {
             activeVoiceGroupSweepTime = sweepTime;
             Map<String, List<String>> selected = CollectionUtils.getRandomElement(voiceGroups);
@@ -922,9 +753,9 @@ public class AotakeUtils {
         int bPage = CommonConfig.get().base().dustbin().dustbinBlockPositions().size();
         int totalPage = getDustbinTotalPage();
         if (totalPage <= 0) {
-            AotakeUtils.sendMessage(player, AotakeComponent.get().trans(EnumI18nType.WORD, "dustbin_page_empty"));
+            MessageUtils.sendNotification(player, AotakeComponent.get().transAuto("dustbin_page_empty"), AotakeNotificationTypes.DUSTBIN);
         } else {
-            switch (EnumDustbinMode.valueOfOrDefault(CommonConfig.get().base().dustbin().dustbinBlockMode())) {
+            switch (CommonConfig.get().base().dustbin().dustbinBlockMode()) {
                 case VIRTUAL: {
                     result = openVirtualDustbin(player, page);
                 }
@@ -957,8 +788,8 @@ public class AotakeUtils {
         }
 
         if (result > 0) {
-            AotakeSweep.playerDustbinPage().put(AotakeUtils.getPlayerUUIDString(player), page);
-            AotakeUtils.sendPacketToPlayer(new DustbinPageSyncToClient(page, totalPage), player);
+            AotakeSweep.getPlayerDustbinPage().put(PlayerUtils.getPlayerUUIDString(player), page);
+            PacketUtils.sendPacketToPlayer(new DustbinPageSyncToClient(page, totalPage), player);
         }
         return result;
     }
@@ -968,7 +799,7 @@ public class AotakeUtils {
         if (trashContainer == null) return 0;
         int result = player.openMenu(trashContainer).orElse(0);
 
-        if (result > 0) AotakeSweep.playerDustbinPage().put(AotakeUtils.getPlayerUUIDString(player), page);
+        if (result > 0) AotakeSweep.getPlayerDustbinPage().put(PlayerUtils.getPlayerUUIDString(player), page);
         return result;
     }
 
@@ -993,7 +824,7 @@ public class AotakeUtils {
             }
         }
 
-        if (result > 0) AotakeSweep.playerDustbinPage().put(AotakeUtils.getPlayerUUIDString(player), page);
+        if (result > 0) AotakeSweep.getPlayerDustbinPage().put(PlayerUtils.getPlayerUUIDString(player), page);
         return result;
     }
 
@@ -1013,13 +844,19 @@ public class AotakeUtils {
             for (String pos : CommonConfig.get().base().dustbin().dustbinBlockPositions()) {
                 WorldCoordinate coordinate = WorldCoordinate.fromString(pos);
                 if (coordinate != null) {
-                    AotakeUtils.clearStorage(AotakeUtils.getBlockItemHandler(coordinate));
+                    Container handler = AotakeUtils.getBlockItemHandler(coordinate);
+                    if (handler != null) {
+                        handler.clearContent();
+                    }
                 }
             }
         } else {
             WorldCoordinate coordinate = WorldCoordinate.fromString(CommonConfig.get().base().dustbin().dustbinBlockPositions().get(page - 1));
             if (coordinate != null) {
-                AotakeUtils.clearStorage(AotakeUtils.getBlockItemHandler(coordinate));
+                Container handler = AotakeUtils.getBlockItemHandler(coordinate);
+                if (handler != null) {
+                    handler.clearContent();
+                }
             }
         }
     }
@@ -1046,54 +883,44 @@ public class AotakeUtils {
     }
 
     public static void dropDustbinBlock(ServerPlayer player, int page) {
-        Consumer<WorldCoordinate> processCoord = coordinate -> {
-            if (coordinate == null) return;
-            Storage<ItemVariant> storage = AotakeUtils.getBlockItemHandler(coordinate);
-            if (storage == null) return;
-
-            try {
-                for (StorageView<ItemVariant> view : storage) {
-                    if (view == null || view.isResourceBlank()) continue;
-                    ItemVariant variant = view.getResource();
-                    long amount = view.getAmount();
-                    if (amount <= 0) continue;
-
-                    try (Transaction tx = Transaction.openOuter()) {
-                        long extracted = storage.extract(variant, amount, tx);
-                        tx.commit();
-                        if (extracted > 0) {
-                            ItemStack stack = variant.toStack((int) extracted);
+        if (page == 0) {
+            for (String pos : CommonConfig.get().base().dustbin().dustbinBlockPositions()) {
+                WorldCoordinate coordinate = WorldCoordinate.fromString(pos);
+                if (coordinate != null) {
+                    Container handler = AotakeUtils.getBlockItemHandler(coordinate);
+                    if (handler != null) {
+                        for (int i = 0; i < handler.getContainerSize(); i++) {
+                            ItemStack stack = handler.removeItemNoUpdate(i);
                             if (!stack.isEmpty()) {
                                 Entity entity = AotakeUtils.getEntityFromItem(player.getLevel(), stack);
                                 entity.moveTo(player.getX(), player.getY(), player.getZ(), player.getYRot(), player.getXRot());
                                 player.getLevel().addFreshEntity(entity);
                             }
                         }
-                    } catch (Throwable ignored) {
                     }
                 }
-            } catch (Throwable ignored) {
-            }
-        };
-
-        List<String> positions = CommonConfig.get().base().dustbin().dustbinBlockPositions();
-
-        if (page == 0) {
-            for (String pos : positions) {
-                WorldCoordinate coordinate = WorldCoordinate.fromString(pos);
-                processCoord.accept(coordinate);
             }
         } else {
-            if (page - 1 >= 0 && page - 1 < positions.size()) {
-                WorldCoordinate coordinate = WorldCoordinate.fromString(positions.get(page - 1));
-                processCoord.accept(coordinate);
+            WorldCoordinate coordinate = WorldCoordinate.fromString(CommonConfig.get().base().dustbin().dustbinBlockPositions().get(page - 1));
+            if (coordinate != null) {
+                Container handler = AotakeUtils.getBlockItemHandler(coordinate);
+                if (handler != null) {
+                    for (int i = 0; i < handler.getContainerSize(); i++) {
+                        ItemStack stack = handler.removeItemNoUpdate(i);
+                        if (!stack.isEmpty()) {
+                            Entity entity = AotakeUtils.getEntityFromItem(player.getLevel(), stack);
+                            entity.moveTo(player.getX(), player.getY(), player.getZ(), player.getYRot(), player.getXRot());
+                            player.getLevel().addFreshEntity(entity);
+                        }
+                    }
+                }
             }
         }
     }
 
     public static int getDustbinTotalPage() {
         int result = 0;
-        switch (EnumDustbinMode.valueOfOrDefault(CommonConfig.get().base().dustbin().dustbinBlockMode())) {
+        switch (CommonConfig.get().base().dustbin().dustbinBlockMode()) {
             case VIRTUAL: {
                 result = CommonConfig.get().base().dustbin().dustbinPageLimit();
             }
@@ -1118,26 +945,6 @@ public class AotakeUtils {
 
 
     // region nbt文件读写
-
-    public static CompoundTag readCompressed(File file) {
-        try {
-            return NbtIo.readCompressed(file);
-        } catch (Exception e) {
-            LOGGER.error("Failed to read compressed file: {}", file.getAbsolutePath(), e);
-            return new CompoundTag();
-        }
-    }
-
-    public static boolean writeCompressed(CompoundTag tag, File file) {
-        boolean result = false;
-        try {
-            NbtIo.writeCompressed(tag, file);
-            result = true;
-        } catch (Exception e) {
-            LOGGER.error("Failed to write compressed file: {}", file.getAbsolutePath(), e);
-        }
-        return result;
-    }
 
     public static boolean hasAotakeTag(ItemStack item) {
         if (item == null) return false;
@@ -1197,171 +1004,30 @@ public class AotakeUtils {
     // region 杂项
 
     /**
-     * 获取指定维度的世界实例
+     * 将物品添加到指定的方块容器
      */
-    public static ServerLevel getWorld(ResourceKey<Level> dimension) {
-        return AotakeSweep.serverInstance().key().getLevel(dimension);
-    }
+    public static ItemStack addItemToBlock(ItemStack stack, WorldCoordinate coordinate) {
+        if (stack == null || stack.isEmpty()) return ItemStack.EMPTY;
+        ServerLevel level = AotakeServerRuntime.currentServer().getLevel(coordinate.dimension());
+        if (level == null) return stack;
 
-    /**
-     * 反序列化方块状态
-     */
-    public static BlockState deserializeBlockState(String block) {
-        try {
-            return BlockStateParser.parseForBlock(Registry.BLOCK, new StringReader(block), false).blockState();
-        } catch (Exception e) {
-            LOGGER.error("Invalid unsafe block: {}", block, e);
-            return null;
-        }
-    }
+        BlockPos pos = coordinate.toBlockPos();
+        if (!level.isLoaded(pos)) return stack;
 
-    /**
-     * 获取方块注册ID
-     */
-    @NonNull
-    public static String getBlockRegistryName(@NonNull BlockState blockState) {
-        return getBlockRegistryName(blockState.getBlock());
-    }
+        BlockEntity te = level.getBlockEntity(pos);
+        if (te == null) return stack;
 
-    /**
-     * 获取方块注册ID
-     */
-    @NonNull
-    public static String getBlockRegistryName(Block block) {
-        Optional<ResourceKey<Block>> key = block.defaultBlockState().getBlockHolder().unwrapKey();
-        return key.map(blockResourceKey -> blockResourceKey.location().toString()).orElse("");
-    }
-
-    /**
-     * 反序列化ItemStack
-     */
-    public static ItemStack deserializeItemStack(@NonNull String item) {
-        ItemStack itemStack;
-        try {
-            itemStack = ItemStack.of(TagParser.parseTag(item));
-        } catch (Exception e) {
-            itemStack = null;
-            LOGGER.error("Invalid unsafe item: {}", item, e);
-        }
-        return itemStack;
-    }
-
-    /**
-     * 反序列化Item
-     */
-    public static Item deserializeItem(@NonNull String item) {
-        ItemStack itemStack = deserializeItemStack(item);
-        if (itemStack != null) {
-            return itemStack.getItem();
-        } else {
-            return null;
-        }
-    }
-
-    /**
-     * 获取物品注册ID
-     */
-    @NonNull
-    public static String getItemRegistryName(@NonNull ItemStack itemStack) {
-        return getItemRegistryName(itemStack.getItem());
-    }
-
-    /**
-     * 获取物品注册ID
-     */
-    @NonNull
-    public static String getItemRegistryName(@NonNull Item item) {
-        ResourceLocation location = Registry.ITEM.getKey(item);
-        return location == null ? "" : location.toString();
-    }
-
-    /**
-     * 获取实体类型注册ID
-     */
-    @NonNull
-    public static String getEntityTypeRegistryName(@NonNull Entity entity) {
-        if (entity instanceof ItemEntity) {
-            return getItemRegistryName(((ItemEntity) entity).getItem());
-        }
-        return getEntityTypeRegistryName(entity.getType());
-    }
-
-    /**
-     * 获取实体类型注册ID
-     */
-    @NonNull
-    public static String getEntityTypeRegistryName(@NonNull EntityType<?> entityType) {
-        ResourceLocation location = Registry.ENTITY_TYPE.getKey(entityType);
-        return location == null ? Identifier.id().empty().toString() : location.toString();
-    }
-
-    public static String getItemCustomNameJson(@NonNull ItemStack itemStack) {
-        String result = "";
-        CompoundTag CompoundTag = itemStack.getTagElement("display");
-        if (CompoundTag != null && CompoundTag.contains("Name", 8)) {
-            result = CompoundTag.getString("Name");
-        }
-        return result;
-    }
-
-    public static net.minecraft.network.chat.Component textComponentFromJson(String json) {
-        net.minecraft.network.chat.Component result = null;
-        if (StringUtils.isNotNullOrEmpty(json)) {
-            try {
-                result = net.minecraft.network.chat.Component.Serializer.fromJson(json);
-            } catch (Exception e) {
-                LOGGER.error("Invalid unsafe item name: {}", json, e);
-            }
-        }
-        return result;
-    }
-
-    public static String getPlayerUUIDString(@NonNull Player player) {
-        return player.getUUID().toString();
-    }
-
-    public static ServerPlayer getPlayerByUUID(String uuid) {
-        return AotakeSweep.serverInstance().key().getPlayerList().getPlayer(UUID.fromString(uuid));
-    }
-
-    /**
-     * 将物品添加到指定的容器
-     */
-    public static ItemStack addItemToStorage(ItemStack stack, Storage<ItemVariant> storage) {
-        if (stack == null || stack.isEmpty() || storage == null || !storage.supportsInsertion()) {
-            return stack;
-        }
-
-        try {
-            ItemVariant variant = ItemVariant.of(stack);
-            long toInsert = stack.getCount();
-
-            try (Transaction tx = Transaction.openOuter()) {
-                long inserted = storage.insert(variant, toInsert, tx);
-                tx.commit();
-
-                int remainingCount = (int) (toInsert - inserted);
-
-                if (remainingCount <= 0) {
-                    return ItemStack.EMPTY;
-                } else {
-                    ItemStack remaining = stack.copy();
-                    remaining.setCount(remainingCount);
-                    return remaining;
-                }
-            }
-        } catch (Throwable t) {
-            LOGGER.warn("Failed to add item to storage", t);
-        }
-        return stack;
+        if (!(te instanceof Container)) return stack;
+        ItemStack remaining = insertIntoContainer((Container) te, stack.copy());
+        te.setChanged();
+        return remaining;
     }
 
     /**
      * 获取指定的方块容器
      */
-    @Nullable
-    public static Storage<ItemVariant> getBlockItemHandler(WorldCoordinate coordinate) {
-        ServerLevel level = AotakeSweep.serverInstance().key().getLevel(coordinate.dimension());
+    public static Container getBlockItemHandler(WorldCoordinate coordinate) {
+        ServerLevel level = AotakeServerRuntime.currentServer().getLevel(coordinate.dimension());
         if (level == null) return null;
 
         BlockPos pos = coordinate.toBlockPos();
@@ -1370,36 +1036,29 @@ public class AotakeUtils {
         BlockEntity te = level.getBlockEntity(pos);
         if (te == null) return null;
 
-        try {
-            Direction side = coordinate.direction();
-            Storage<ItemVariant> storage = ItemStorage.SIDED.find(level, pos, side);
-            if (storage != null && storage.supportsInsertion()) {
-                return storage;
-            }
-        } catch (Throwable ignored) {
-        }
-        return null;
+        return te instanceof Container ? (Container) te : null;
     }
 
-    public static void clearStorage(Storage<ItemVariant> storage) {
-        if (storage == null) return;
-
-        try (Transaction tx = Transaction.openOuter()) {
-            for (StorageView<ItemVariant> view : storage) {
-                if (!view.isResourceBlank()) {
-                    long amount = view.getAmount();
-                    if (amount > 0) {
-                        storage.extract(view.getResource(), amount, tx);
-                    }
-                }
+    /** Fabric 1.16 没有 Forge item capability，使用原版容器语义完成合并与插入。 */
+    private static ItemStack insertIntoContainer(Container container, ItemStack stack) {
+        for (int i = 0; i < container.getContainerSize() && !stack.isEmpty(); i++) {
+            ItemStack slot = container.getItem(i);
+            if (!slot.isEmpty() && ItemStack.isSame(slot, stack) && slot.getCount() < slot.getMaxStackSize()) {
+                int moved = Math.min(stack.getCount(), slot.getMaxStackSize() - slot.getCount());
+                slot.grow(moved);
+                stack.shrink(moved);
             }
-            tx.commit();
-        } catch (Throwable ignored) {
         }
-    }
-
-    public static String getDimensionRegistryName(Level world) {
-        return world.dimension().location().toString();
+        for (int i = 0; i < container.getContainerSize() && !stack.isEmpty(); i++) {
+            if (!container.getItem(i).isEmpty()) continue;
+            int moved = Math.min(stack.getCount(), stack.getMaxStackSize());
+            ItemStack inserted = stack.copy();
+            inserted.setCount(moved);
+            container.setItem(i, inserted);
+            stack.shrink(moved);
+        }
+        container.setChanged();
+        return stack;
     }
 
     public static <T> List<T> singleList(T value) {
